// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a snapshot summary 1`] = `
Array [
  "Snapshot Summary",
  " › 1 snapshot written in 1 test suite.",
  " › 1 snapshot test failed in 1 test suite. Inspect your code changes or press --u to update them.",
  " › 1 snapshot updated in 1 test suite.",
  " › 1 obsolete snapshot file found, press --u to remove it.",
  " › 1 obsolete snapshot found, press --u to remove it.",
]
`;

exports[`creates a snapshot summary after an update 1`] = `
Array [
  "Snapshot Summary",
  " › 1 snapshot written in 1 test suite.",
  " › 1 snapshot test failed in 1 test suite. Inspect your code changes or press --u to update them.",
  " › 1 snapshot updated in 1 test suite.",
  " › 1 obsolete snapshot file removed.",
  " › 1 obsolete snapshot removed.",
]
`;

exports[`creates a snapshot summary with multiple snapshot being written/updated 1`] = `
Array [
  "Snapshot Summary",
  " › 2 snapshots written in 2 test suites.",
  " › 2 snapshot tests failed in 2 test suites. Inspect your code changes or press --u to update them.",
  " › 2 snapshots updated in 2 test suites.",
  " › 2 obsolete snapshot files found, press --u to remove them..",
  " › 2 obsolete snapshots found, press --u to remove them.",
]
`;

exports[`returns nothing if there are no updates 1`] = `
Array [
  "Snapshot Summary",
]
`;
